-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 8u60, 9
-
Component/s: hotspot
-
b45
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083165 | emb-9 | Thomas Schatzl | P1 | Resolved | Fixed | team |
| JDK-8086461 | 8u65 | Thomas Schatzl | P1 | Resolved | Fixed | b01 |
| JDK-8076354 | 8u60 | Thomas Schatzl | P1 | Closed | Fixed | b10 |
| JDK-8137616 | emb-8u65 | Unassigned | P1 | Resolved | Fixed | b01 |
| JDK-8078911 | emb-8u60 | Thomas Schatzl | P1 | Resolved | Fixed | team |
Assert fails in lots of tests in the nightly testing.
# Internal Error (/opt/jprt/T/P1/131533.brutisso/s/hotspot/src/share/vm/gc_implementation/g1/heapRegionManager.inline.hpp:43), pid=5600, tid=4091272048
# assert(is_available(index)) failed: pre-condition
Stack trace:
Current thread (0xeb1e3c00): VMThread [stack: 0xf3d3d000,0xf3dbe000] [id=5619]
Stack: [0xf3d3d000,0xf3dbe000], sp=0xf3dbcbd0, free space=510k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa8ef98] VMError::report_and_die()+0x198;; VMError::report_and_die()+0x198
V [libjvm.so+0x3c9506] report_vm_error(char const*, int, char const*, char const*)+0x76;; report_vm_error(char const*, int, char const*, char const*)+0x76
V [libjvm.so+0x445f7c] G1CollectedHeap::check_cset_fast_test()+0x1ec;; G1CollectedHeap::check_cset_fast_test()+0x1ec
V [libjvm.so+0x453f9d] G1CollectedHeap::do_collection_pause_at_safepoint(double)+0x63d;; G1CollectedHeap::do_collection_pause_at_safepoint(double)+0x63d
V [libjvm.so+0xabac80] VM_G1IncCollectionPause::doit()+0xc0;; VM_G1IncCollectionPause::doit()+0xc0
V [libjvm.so+0xab8ed7] VM_Operation::evaluate()+0x97;; VM_Operation::evaluate()+0x97
V [libjvm.so+0xab6395] VMThread::evaluate_operation(VM_Operation*)+0x145;; VMThread::evaluate_operation(VM_Operation*)+0x145
V [libjvm.so+0xab6ce5] VMThread::loop()+0x4e5;; VMThread::loop()+0x4e5
V [libjvm.so+0xab6f83] VMThread::run()+0x123;; VMThread::run()+0x123
V [libjvm.so+0x8a4090] java_start(Thread*)+0x100;; java_start(Thread*)+0x100
C [libpthread.so.0+0x6a49]
VM_Operation (0xead7d334): G1IncCollectionPause, mode: safepoint, requested by thread 0xeaee2400
# Internal Error (/opt/jprt/T/P1/131533.brutisso/s/hotspot/src/share/vm/gc_implementation/g1/heapRegionManager.inline.hpp:43), pid=5600, tid=4091272048
# assert(is_available(index)) failed: pre-condition
Stack trace:
Current thread (0xeb1e3c00): VMThread [stack: 0xf3d3d000,0xf3dbe000] [id=5619]
Stack: [0xf3d3d000,0xf3dbe000], sp=0xf3dbcbd0, free space=510k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa8ef98] VMError::report_and_die()+0x198;; VMError::report_and_die()+0x198
V [libjvm.so+0x3c9506] report_vm_error(char const*, int, char const*, char const*)+0x76;; report_vm_error(char const*, int, char const*, char const*)+0x76
V [libjvm.so+0x445f7c] G1CollectedHeap::check_cset_fast_test()+0x1ec;; G1CollectedHeap::check_cset_fast_test()+0x1ec
V [libjvm.so+0x453f9d] G1CollectedHeap::do_collection_pause_at_safepoint(double)+0x63d;; G1CollectedHeap::do_collection_pause_at_safepoint(double)+0x63d
V [libjvm.so+0xabac80] VM_G1IncCollectionPause::doit()+0xc0;; VM_G1IncCollectionPause::doit()+0xc0
V [libjvm.so+0xab8ed7] VM_Operation::evaluate()+0x97;; VM_Operation::evaluate()+0x97
V [libjvm.so+0xab6395] VMThread::evaluate_operation(VM_Operation*)+0x145;; VMThread::evaluate_operation(VM_Operation*)+0x145
V [libjvm.so+0xab6ce5] VMThread::loop()+0x4e5;; VMThread::loop()+0x4e5
V [libjvm.so+0xab6f83] VMThread::run()+0x123;; VMThread::run()+0x123
V [libjvm.so+0x8a4090] java_start(Thread*)+0x100;; java_start(Thread*)+0x100
C [libpthread.so.0+0x6a49]
VM_Operation (0xead7d334): G1IncCollectionPause, mode: safepoint, requested by thread 0xeaee2400
- backported by
-
JDK-8078911 assert(is_available(index)) failed in G1 cset
-
- Resolved
-
-
JDK-8083165 assert(is_available(index)) failed in G1 cset
-
- Resolved
-
-
JDK-8086461 assert(is_available(index)) failed in G1 cset
-
- Resolved
-
-
JDK-8137616 assert(is_available(index)) failed in G1 cset
-
- Resolved
-
-
JDK-8076354 assert(is_available(index)) failed in G1 cset
-
- Closed
-
- relates to
-
JDK-8060025 Object copy time regressions after JDK-8031323 and JDK-8057536
-
- Resolved
-
(1 relates to)