8068036: assert(is_available(index)) failed in G1 cset

Some verification code iterated over the heap using the region mapping array. This is not allowed. Changed to use the regular iteration method with closure.

Reviewed-by: jwilhelm, brutisso